# hermes-muninndb-plugin

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  __init__.py  cli.py  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/hermes_muninndb_plugin/: __init__.py  cli.py  installer.py
tests/: test_muninndb_plugin.py
